# from-scratch

./: .gitignore  Makefile  README.md  pyproject.toml
compiler/: compiler.py  test.src
data_compressor/: compressor.py
shell/: shell.py
text_editor/: editor.py
